REFACTOR: (EIF-T-24) foodShopCard naming 수정 - foodCard -> foodShopCard 로 네이밍 수정 - Dockerfile version 변경 및 테스트코드 변경
