# docs/swagger.json
@@ -11,7 +11,7 @@
     },
     "host": "eveningisfood.com",
     "paths": {
-        "/foodCard": {
+        "/foodShopCard": {
             "post": {
                 "description": "음식점카드를 생성하는 API",
                 "consumes": [
@@ -27,11 +27,11 @@
                 "parameters": [
                     {
                         "description": "음식점카드 생성 Request Body",
-                        "name": "foodCard",
+                        "name": "foodShopCard",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/foodCardControllerCommandDto.CreateRequest"
+                            "$ref": "#/definitions/foodShopCardControllerCommandDto.CreateRequest"
                         }
                     }
                 ],
@@ -39,19 +39,19 @@
                     "200": {
                         "description": "음식점카드 생성 Response",
                         "schema": {
-                            "$ref": "#/definitions/foodCardControllerCommandDto.CreateResponse"
+                            "$ref": "#/definitions/foodShopCardControllerCommandDto.CreateResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/foodCardControllerCommandDto.CreateResponseError"
+                            "$ref": "#/definitions/foodShopCardControllerCommandDto.CreateResponseError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/foodCardControllerCommandDto.CreateResponseError"
+                            "$ref": "#/definitions/foodShopCardControllerCommandDto.CreateResponseError"
                         }
                     }
                 }
@@ -59,7 +59,7 @@
         }
     },
     "definitions": {
-        "foodCardControllerCommandDto.CreateRequest": {
+        "foodShopCardControllerCommandDto.CreateRequest": {
             "type": "object",
             "properties": {
                 "address": {
@@ -74,19 +74,19 @@
                 }
             }
         },
-        "foodCardControllerCommandDto.CreateResponse": {
+        "foodShopCardControllerCommandDto.CreateResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "string",
                     "example": "SUCCESS"
                 },
-                "foodCard": {
-                    "$ref": "#/definitions/foodCardControllerCommandDto.FoodCard"
+                "foodShopCard": {
+                    "$ref": "#/definitions/foodShopCardControllerCommandDto.FoodShopCard"
                 }
             }
         },
-        "foodCardControllerCommandDto.CreateResponseError": {
+        "foodShopCardControllerCommandDto.CreateResponseError": {
             "type": "object",
             "properties": {
                 "code": {
@@ -97,7 +97,7 @@
                 }
             }
         },
-        "foodCardControllerCommandDto.FoodCard": {
+        "foodShopCardControllerCommandDto.FoodShopCard": {
             "type": "object",
             "properties": {
                 "address": {
