# src/Main.module.go
@@ -2,7 +2,7 @@ package mainModule
 
 import (
 	"github.com/gofiber/fiber/v2"
-	foodCardModule "github.com/shinYeongHyeon/eveningIsFood-api/src/foodCard"
+	foodShopCardModule "github.com/shinYeongHyeon/eveningIsFood-api/src/foodShopCard"
 	healthModule "github.com/shinYeongHyeon/eveningIsFood-api/src/health"
 	userModule "github.com/shinYeongHyeon/eveningIsFood-api/src/user"
 )
@@ -13,7 +13,7 @@ func CreateModule() *fiber.App {
 
 	mainModule.Mount("/health", healthModule.CreateModule())
 	mainModule.Mount("/user", userModule.CreateModule())
-	mainModule.Mount("/foodCard", foodCardModule.CreateModule())
+	mainModule.Mount("/foodShopCard", foodShopCardModule.CreateModule())
 
 	return mainModule
 }
